--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch sass/main.scss:main.css"
+    "sass": "sass --watch sass/main.scss:main.css",
+    "server": "json-server -p 3001 --watch db.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "sass": "^1.77.6"
+  },
+  "dependencies": {
+    "json-server": "^1.0.0-beta.1"
   }
 }
